<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:focusable="true" android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="24dp"
        android:paddingBottom="20dp">
        <TextView
            android:id="@+id/seedTitleLabel"
            android:layout_marginStart="24dp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/seed_title"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/seedTitleEditor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:nextFocusDown="@id/nodeProgressEditor"
            android:text="@string/seed_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="24dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/seedDescriptionLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/seed_description" />

        <TextView
            android:id="@+id/seedDescriptionView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:minLines="4"
            android:text="@string/seed_description" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="24dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/seedUploadButton"
            android:layout_width="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seed_upload" />

    </LinearLayout>


</LinearLayout>